<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.us.all.sample.crypyocompare.activities.Home">
    <include
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtBTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="74dp"
                android:layout_marginStart="74dp"
                android:text="@string/_1_btc" />

            <TextView
                android:id="@+id/txtETC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtBTC"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/txtBTC"
                android:layout_marginBottom="12dp"
                android:text="@string/_1_etc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="84dp"
                android:layout_marginStart="84dp"
                android:text="@string/equals"
                android:textSize="24pt"
                android:textStyle="bold"
                android:layout_alignTop="@+id/txtBTC"
                android:layout_toRightOf="@+id/txtBTC"
                android:layout_toEndOf="@+id/txtBTC" />

            <TextView
                android:id="@+id/txtBTCDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/txtBTC"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"

                android:text="@string/dollar" />

            <TextView
                android:id="@+id/txtETCDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txtBTCDollar"
                android:layout_alignRight="@+id/txtBTCDollar"
                android:gravity="center"
                android:layout_alignTop="@+id/txtETC"

                android:text="@string/dolla" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="5dp"
        android:text="@string/choose_a_currency_you_wish_to_convert"
        android:textAlignment="center"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <GridView
        android:layout_width="wrap_content"
        android:id="@+id/Gridview"
        android:layout_marginTop="5dp"
        android:tag="@string/app_name"
        android:numColumns="2"
        android:layout_height="wrap_content">

    </GridView>


</LinearLayout>
